# Crow_Cpp

./: CMakeLists.txt  README.md  build.bat  buildRun.bat  run.bat
Dependencies/x64-windows/lib/: boost_context-vc140-mt.lib  boost_coroutine-vc140-mt.lib  boost_exception-vc140-mt.lib  mk_api.lib  srtp2.lib
Dependencies/x64-windows/share/boost-algorithm/: vcpkg.spdx.json  vcpkg_abi_info.txt
Dependencies/x64-windows/share/boost-align/: vcpkg.spdx.json  vcpkg_abi_info.txt
Dependencies/x64-windows/share/boost-array/: vcpkg.spdx.json  vcpkg_abi_info.txt
Dependencies/x64-windows/share/boost-asio/: vcpkg.spdx.json  vcpkg_abi_info.txt
Dependencies/x64-windows/share/boost-assert/: vcpkg.spdx.json  vcpkg_abi_info.txt
Dependencies/x64-windows/share/boost-bind/: vcpkg.spdx.json  vcpkg_abi_info.txt
Dependencies/x64-windows/share/boost-build/: vcpkg.spdx.json  vcpkg_abi_info.txt
Dependencies/x64-windows/share/boost-chrono/: vcpkg.spdx.json  vcpkg_abi_info.txt
Dependencies/x64-windows/share/boost-concept-check/: vcpkg.spdx.json  vcpkg_abi_info.txt
Dependencies/x64-windows/share/boost-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
Dependencies/x64-windows/share/boost-container/: vcpkg.spdx.json  vcpkg_abi_info.txt
Dependencies/x64-windows/share/boost-container-hash/: vcpkg.spdx.json  vcpkg_abi_info.txt
Dependencies/x64-windows/share/boost-context/: vcpkg.spdx.json  vcpkg_abi_info.txt
src/: main.cpp
src/routes/: Books.cpp
src/templates/ficha7/: index.css  index.html
static/ficha7/: index.html  styles.css
(+109 files in other folders)
